--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10641,8 +10641,7 @@ body {
 }
 
 .form-conatiner {
-  width: 800px;
-  position: relative;
+  overflow-y: auto;
   margin: 0 auto;
   background: #fff;
   box-shadow: 0px 3px 9.5px 0.5px rgba(0, 0, 0, 0.1);
@@ -10696,4 +10695,10 @@ body {
 }
 .resume-tab .col :last-child {
   padding-right: none;
+}
+
+@media screen and (max-width: 576px) {
+  .d-xs-none {
+    display: none !important;
+  }
 }
