--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -145,8 +145,7 @@
 }
 
 .form-conatiner {
-  width: 800px;
-  position: relative;
+  overflow-y: auto;
   margin: 0 auto;
   background: #fff;
   box-shadow: 0px 3px 9.5px 0.5px rgba(0, 0, 0, 0.1);
@@ -201,5 +200,11 @@
     :last-child{
       padding-right: none;
     }
+  }
+}
+
+@media screen and (max-width: 576px){
+  .d-xs-none{
+    display: none!important;
   }
 }
